add Kurdish line

--- a/goodbye.html
+++ b/goodbye.html
@@ -4,4 +4,5 @@
 <ul>
   <li> English: Goodbye, friends! </li>
   <li> Spanish:  Adios, amigos! </li>
+  <li> Kurdish: Kho-hafis, refiq! </li>
 </ul>
